gateway/nginx-static-deployment-svc.yaml
# nginx-static-deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-static-deployment
  namespace: default
  labels:
    app: nginx-static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-static
  template:
    metadata:
      labels:
        app: nginx-static
    spec:
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-conf
        - name: nginx-html-volume
          configMap:
            name: nginx-static-content-cm
        - name: nginx-assets-volume
          configMap:
            name: nginx-static-content-cm
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: nginx-html-volume
              mountPath: /var/www/static/index.html
              subPath: index.html
            - name: nginx-assets-volume
              mountPath: /var/www/static/logo.jpg
              subPath: logo.jpg
            - name: nginx-assets-volume
              mountPath: /var/www/static/ChatGPT.png
              subPath: ChatGPT.png
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-static-service
  namespace: default
  labels:
    app: nginx-static
spec:
  type: ClusterIP
  selector:
    app: nginx-static
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
